# jambulani

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/accounts/: admin.py  authentication.py  models.py  serializers.py  tokens.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: test_auth.py
backend/config/: celery.py  middleware.py  settings.py  throttles.py  urls.py
backend/store/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/store/management/commands/: seed_data.py
backend/store/migrations/: 0001_initial.py  0002_alter_cartitem_created_at_alter_cartitem_session_key_and_more.py
backend/store/tests/: test_api.py  test_models.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mjs  vitest.config.ts
frontend/app/: app.vue  error.vue
frontend/app/composables/: useApi.ts  useClientStore.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: checkout.vue  index.vue  login.vue  register.vue
frontend/app/plugins/: auth.client.ts
frontend/app/stores/: auth.ts  cart.ts  language.ts
frontend/app/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/__mocks__/: index.ts
frontend/tests/components/: AppFooter.test.ts  ProductCard.test.ts
(+13 files in other folders)
